cider/tests/debugger/source_info.expect

---STDERR---
==== Cider: The Calyx Interpreter and Debugger ====
(../debugger/file1: 1) this file exists to help test source line printing in cider
(../debugger/file2: 3) Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Error: file ../debugger/file2 does not have a line 17
(../debugger/file1: 1) this file exists to help test source line printing in cider
(../debugger/file1: 5) why are you looking down here
(../debugger/file1: 1) this file exists to help test source line printing in cider
(../debugger/file1: 5) why are you looking down here
Main component has finished executing. Debugger is now in inspection mode.
Exiting.
